--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-
+        <div class="drawing-table">
         <table></table>
-
+        </div>
+        <ul></ul>
 
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
